fix: footer alignment is back to center

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,4 +1,4 @@
 .center
 {
-    text-align: left;
+    text-align: center;
 }
